[package]
name = "near-abi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-rs"
description = "NEAR smart contract ABI primitives"

[dependencies]
borsh = { version = "0.9", features = ["const-generics"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8.8"

[dev-dependencies]
serde_json = "1"

[features]
versioned-entries = []
