[package]
name = "near-abi"
version = "0.4.2"
edition = "2021"
rust-version = "1.66.0"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/near/near-abi-rs"
description = "NEAR smart contract ABI primitives"

[dependencies]
borsh = { version = ">=1.1.0,<1.6.0", features = ["unstable__schema", "derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8.11", features = ["impl_json_schema"] }

[dev-dependencies]
serde_json = "1"
insta = "1.29.0"

[features]
__chunked-entries = []
