[package]
name = "near-abi"
version = "0.4.4"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/near/near-abi-rs"
description = "NEAR smart contract ABI primitives"

[dependencies]
borsh = { version = "1.6", features = ["unstable__schema", "derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"

[dev-dependencies]
insta = "1"

[features]
__chunked-entries = []
