[package]
name = "near-abi"
version = "0.4.5"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/near/near-abi-rs"
description = "NEAR smart contract ABI primitives"

[dependencies]
borsh = { version = ">=1.6.0,<1.7.0", features = ["unstable__schema", "derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8.22", features = ["impl_json_schema"] }

[dev-dependencies]
serde_json = "1"
insta = "1.29.0"

[features]
__chunked-entries = []
